fixed navbar aligning content
added multiple pictures but all do not work something is making the picture cover the entire webpage

--- a/pizzarestaurant/styles/Navbar.module.css
+++ b/pizzarestaurant/styles/Navbar.module.css
@@ -13,6 +13,7 @@
     flex: 1;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .item:nth-child(2) {
